<resources>
    <string name="app_name">Dictionary</string>
    <string name="nav_header_title">Your Dictionary</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_en_vn">English - Vietnamese</string>
    <string name="menu_en_en">English - English</string>
    <string name="menu_vn_en">Vietnamese - English</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_your_words">Your Words</string>

    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>

    <string name="Welcome">MyDictionarTtest@gmail.com</string>

</resources>
